[gd_scene load_steps=52 format=2]

[ext_resource path="res://Scripts/Box_Enemy.gd" type="Script" id=1]
[ext_resource path="res://Sprites/Enemigos/Caja_Aniquiladora/Saltando/Jump_1.png" type="Texture" id=2]
[ext_resource path="res://Sprites/Enemigos/Caja_Aniquiladora/Saltando/Jump_2.png" type="Texture" id=3]
[ext_resource path="res://Sprites/Enemigos/Caja_Aniquiladora/Saltando/Jump_3.png" type="Texture" id=4]
[ext_resource path="res://Sprites/Enemigos/Caja_Aniquiladora/Saltando/Jump_4.png" type="Texture" id=5]
[ext_resource path="res://Sprites/Enemigos/Caja_Aniquiladora/Saltando/Jump_5.png" type="Texture" id=6]
[ext_resource path="res://Sprites/Enemigos/Caja_Aniquiladora/Saltando/Jump_6.png" type="Texture" id=7]
[ext_resource path="res://Sprites/Enemigos/Caja_Aniquiladora/Saltando/Jump_7.png" type="Texture" id=8]
[ext_resource path="res://Sprites/Enemigos/Caja_Aniquiladora/Saltando/Jump_8.png" type="Texture" id=9]
[ext_resource path="res://Sprites/Enemigos/Caja_Aniquiladora/Saltando/Jump_9.png" type="Texture" id=10]
[ext_resource path="res://Sprites/Enemigos/Caja_Aniquiladora/Saltando/Jump_10.png" type="Texture" id=11]
[ext_resource path="res://Sprites/Enemigos/Caja_Aniquiladora/Saltando/Jump_11.png" type="Texture" id=12]
[ext_resource path="res://Sprites/Enemigos/Caja_Aniquiladora/Parandose/Shooting_1.png" type="Texture" id=13]
[ext_resource path="res://Sprites/Enemigos/Caja_Aniquiladora/Muriendo/Death_1.png" type="Texture" id=14]
[ext_resource path="res://Sprites/Enemigos/Caja_Aniquiladora/Muriendo/Death_2.png" type="Texture" id=15]
[ext_resource path="res://Sprites/Enemigos/Caja_Aniquiladora/Muriendo/Death_3.png" type="Texture" id=16]
[ext_resource path="res://Sprites/Enemigos/Caja_Aniquiladora/Muriendo/Death_4.png" type="Texture" id=17]
[ext_resource path="res://Sprites/Enemigos/Caja_Aniquiladora/Muriendo/Death_5.png" type="Texture" id=18]
[ext_resource path="res://Sprites/Enemigos/Caja_Aniquiladora/Parandose/Shooting_2.png" type="Texture" id=19]
[ext_resource path="res://Sprites/Enemigos/Caja_Aniquiladora/Parandose/Shooting_3.png" type="Texture" id=20]
[ext_resource path="res://Sprites/Enemigos/Caja_Aniquiladora/Parandose/Shooting_4.png" type="Texture" id=21]
[ext_resource path="res://Sprites/Enemigos/Caja_Aniquiladora/Parandose/Shooting_5.png" type="Texture" id=22]
[ext_resource path="res://Sprites/Enemigos/Caja_Aniquiladora/Parandose/Shooting_6.png" type="Texture" id=23]
[ext_resource path="res://Sprites/Enemigos/Caja_Aniquiladora/Parandose/Shooting_7.png" type="Texture" id=24]
[ext_resource path="res://Sprites/Enemigos/Caja_Aniquiladora/Parandose/Shooting_8.png" type="Texture" id=25]
[ext_resource path="res://Sprites/Enemigos/Caja_Aniquiladora/Parandose/Shooting_9.png" type="Texture" id=26]
[ext_resource path="res://Sprites/Enemigos/Caja_Aniquiladora/Parandose/Shooting_10.png" type="Texture" id=27]
[ext_resource path="res://Sprites/Enemigos/Caja_Aniquiladora/Parandose/Shooting_11.png" type="Texture" id=28]
[ext_resource path="res://Sprites/Enemigos/Caja_Aniquiladora/Parandose/Shooting_12.png" type="Texture" id=29]
[ext_resource path="res://Sprites/Enemigos/Caja_Aniquiladora/Parandose/Shooting_13.png" type="Texture" id=30]
[ext_resource path="res://Sprites/Enemigos/Caja_Aniquiladora/Parandose/Shooting_14.png" type="Texture" id=31]
[ext_resource path="res://Sprites/Enemigos/Caja_Aniquiladora/Parandose/Shooting_15.png" type="Texture" id=32]
[ext_resource path="res://Sprites/Enemigos/Caja_Aniquiladora/Parandose/Shooting_16.png" type="Texture" id=33]
[ext_resource path="res://Sprites/Enemigos/Caja_Aniquiladora/Parandose/Shooting_17.png" type="Texture" id=34]
[ext_resource path="res://Sprites/Enemigos/Caja_Aniquiladora/Parandose/Shooting_18.png" type="Texture" id=35]
[ext_resource path="res://Sprites/Enemigos/Caja_Aniquiladora/Parandose/Shooting_19.png" type="Texture" id=36]
[ext_resource path="res://Sprites/Enemigos/Caja_Aniquiladora/Parandose/Shooting_20.png" type="Texture" id=37]
[ext_resource path="res://Sprites/Enemigos/Caja_Aniquiladora/Parandose/Shooting_21.png" type="Texture" id=38]
[ext_resource path="res://Sprites/Enemigos/Caja_Aniquiladora/Parandose/Shooting_22.png" type="Texture" id=39]
[ext_resource path="res://Sprites/Enemigos/Caja_Aniquiladora/Parandose/Shooting_23.png" type="Texture" id=40]
[ext_resource path="res://Sprites/Enemigos/Caja_Aniquiladora/Parandose/Shooting_24.png" type="Texture" id=41]
[ext_resource path="res://Sprites/Enemigos/Caja_Aniquiladora/Parandose/Shooting_25.png" type="Texture" id=42]
[ext_resource path="res://Sprites/Enemigos/Caja_Aniquiladora/Parandose/Shooting_26.png" type="Texture" id=43]
[ext_resource path="res://Sprites/Enemigos/Caja_Aniquiladora/Parandose/Shooting_27.png" type="Texture" id=44]
[ext_resource path="res://Sprites/Enemigos/Caja_Aniquiladora/Parandose/Shooting_28.png" type="Texture" id=45]
[ext_resource path="res://Sprites/Enemigos/Caja_Aniquiladora/Parandose/Shooting_29.png" type="Texture" id=46]
[ext_resource path="res://Sprites/Enemigos/Caja_Aniquiladora/Parandose/Shooting_30.png" type="Texture" id=47]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 21.6556, 17.1954 )

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 2 ), ExtResource( 3 ), ExtResource( 4 ), ExtResource( 5 ), ExtResource( 6 ), ExtResource( 7 ), ExtResource( 8 ), ExtResource( 9 ), ExtResource( 10 ), ExtResource( 11 ), ExtResource( 12 ), ExtResource( 2 ) ],
"loop": false,
"name": "Jump",
"speed": 20.0
}, {
"frames": [ ExtResource( 13 ) ],
"loop": false,
"name": "Idle",
"speed": 5.0
}, {
"frames": [ ExtResource( 14 ), ExtResource( 15 ), ExtResource( 16 ), ExtResource( 17 ), ExtResource( 18 ) ],
"loop": false,
"name": "Death",
"speed": 20.0
}, {
"frames": [ ExtResource( 13 ), ExtResource( 19 ), ExtResource( 20 ), ExtResource( 21 ), ExtResource( 22 ), ExtResource( 23 ), ExtResource( 24 ), ExtResource( 25 ), ExtResource( 26 ), ExtResource( 27 ), ExtResource( 28 ), ExtResource( 29 ), ExtResource( 30 ), ExtResource( 31 ), ExtResource( 32 ), ExtResource( 33 ), ExtResource( 34 ), ExtResource( 35 ), ExtResource( 36 ), ExtResource( 37 ), ExtResource( 38 ), ExtResource( 39 ), ExtResource( 40 ), ExtResource( 41 ), ExtResource( 42 ), ExtResource( 43 ), ExtResource( 44 ), ExtResource( 45 ), ExtResource( 46 ), ExtResource( 47 ), ExtResource( 13 ) ],
"loop": false,
"name": "Shoot",
"speed": 20.0
} ]

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 73.0456, 39.0073 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 20, 17.639 )

[node name="Box_Enemy" type="KinematicBody2D"]
script = ExtResource( 1 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -0.01, 8.72329 )
scale = Vector2( 1, 0.949214 )
shape = SubResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
scale = Vector2( 0.1, 0.1 )
frames = SubResource( 2 )
animation = "Idle"

[node name="Hitbox_Enemy" type="Area2D" parent="."]
editor/display_folded = true
position = Vector2( 0, -1.06293 )
scale = Vector2( 1, 0.966784 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox_Enemy"]
position = Vector2( -0.01, 8.8 )
shape = SubResource( 1 )

[node name="Hitbox_Jump" type="Area2D" parent="."]
editor/display_folded = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox_Jump"]
position = Vector2( 0, -7.60451 )
scale = Vector2( 1, 0.83389 )
shape = SubResource( 3 )

[node name="Hitbox_Shoot" type="Area2D" parent="."]
editor/display_folded = true

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Hitbox_Shoot"]
polygon = PoolVector2Array( 80, -40, 80, 20, 260, 20, 260, -40 )

[node name="CollisionPolygon2D2" type="CollisionPolygon2D" parent="Hitbox_Shoot"]
polygon = PoolVector2Array( -80, -40, -260, -40, -260, 20, -80, 20 )

[node name="Damage_Area" type="Area2D" parent="."]
editor/display_folded = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="Damage_Area"]
position = Vector2( 0, 9 )
shape = SubResource( 4 )

[node name="Position2D" type="Position2D" parent="."]
position = Vector2( -21.8992, -12.2635 )

[node name="Timer_Shoot" type="Timer" parent="."]

[node name="Timer_Jump" type="Timer" parent="."]

[node name="Timer_Death" type="Timer" parent="."]

[node name="Timer_Death_Animation" type="Timer" parent="."]

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]
position = Vector2( 0.397217, 9.53314 )

[node name="Timer_Modulate" type="Timer" parent="."]

[connection signal="area_entered" from="Hitbox_Enemy" to="." method="_on_Hitbox_Enemy_area_entered"]
[connection signal="body_entered" from="Hitbox_Jump" to="." method="_on_Hitbox_Jump_body_entered"]
[connection signal="body_entered" from="Hitbox_Shoot" to="." method="_on_Hitbox_Shoot_body_entered"]
[connection signal="area_entered" from="Damage_Area" to="." method="_on_Damage_Area_area_entered"]
[connection signal="timeout" from="Timer_Shoot" to="." method="_on_Timer_Shoot_timeout"]
[connection signal="timeout" from="Timer_Jump" to="." method="_on_Timer_Jump_timeout"]
[connection signal="timeout" from="Timer_Death" to="." method="_on_Timer_Death_timeout"]
[connection signal="timeout" from="Timer_Death_Animation" to="." method="_on_Timer_Death_Animation_timeout"]
[connection signal="screen_entered" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_entered"]
[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
[connection signal="timeout" from="Timer_Modulate" to="." method="_on_Timer_Modulate_timeout"]
